# Clipboard-Cleaner

./: Clipboard Cleaner.spec  LICENSE  README.md  clipboard_cleaner.py  pyproject.toml
scripts/: build_macos_app.sh
src/clipboard_cleaner/: app.py  cleaning.py  cli.py
src/clipboard_cleaner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cleaning.py
