[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipboard-cleaner"
version = "1.0.0"
description = "Professional plain-text clipboard cleaner for macOS"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "J. Miranda"}]
keywords = ["clipboard", "tkinter", "macos", "text"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: MacOS X",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
]

[project.scripts]
clipboard-cleaner = "clipboard_cleaner.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
build = ["pyinstaller>=6.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
